<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contentS"
    android:background="@drawable/backgrounds"
    tools:context="totchi.apps.a.imall.SignUpModul.SignUpActivity">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/name_sign_up"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />
        <EditText
            android:id="@+id/email_sign_up"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />
        <TextView
            android:id="@+id/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/real_email"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/white"
            android:visibility="gone" />
        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/hint_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/real_pass"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/white"
            android:visibility="gone" />
        <EditText
            android:id="@+id/con_password_sign_up"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/conf_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />
        <EditText
            android:id="@+id/phone_sign_up"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/phone"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.0">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/blueroundedcourner"
            android:padding="16dp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
             />



    </LinearLayout>



</android.support.constraint.ConstraintLayout>
