<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contentL"
    android:background="@drawable/backgrounds"
    tools:context="totchi.apps.a.imall.LoginModule.LoginActivity"
    >


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/email_log_in"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/password_log_in"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5pt"
            android:background="@drawable/roundedblue"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/blueroundedcourner"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/OR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textColor="#B21212"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/blueroundedcourner"
            android:padding="16dp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
           />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="131dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:text="@string/forget_password"
            android:layout_marginBottom="10dp"
            android:textColor="#B21212"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progresslogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/forgetPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
